feat: 添加sharp依赖并实现图片尺寸检查功能

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@iconify/json": "^2.2.338",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
-    "fs-extra": "^11.2.0"
+    "fs-extra": "^11.2.0",
+    "sharp": "^0.34.1"
   },
   "type": "module"
 }
